add data saving

--- a/workshopconfig.ini
+++ b/workshopconfig.ini
@@ -12,6 +12,6 @@ $OBJECT_SCRIPT reset_presidente "Reset El Presidente Save Data"
 
 $ITEM_NAME "El Presidente: Cold War Politics"
  
-$ITEM_DESC "A mod that adds in-game contracts for the NATO and Soviets. You must balance the forces to make sure they don't get upset with you and cut you off!"
+$ITEM_DESC "A mod that adds in-game contracts, trade, and reputation for the NATO and Soviets. You must balance the forces to make sure they don't get upset with you and cut you off!"
  
 $END
