--- a/workshopconfig.ini
+++ b/workshopconfig.ini
@@ -4,11 +4,10 @@ $OWNER_ID 76561198013279576
 
 $ITEM_TYPE WORKSHOP_ITEMTYPE_SCRIPT
 
-$VISIBILITY 0
-
-$OBJECT_SCRIPT presidente "El Presidente: Cold War Contracts (Full)"
-$OBJECT_SCRIPT cancel_presidente "Stop El Presidente"
-$OBJECT_SCRIPT reset_presidente "Reset El Presidente Save Data"
+$VISIBILITY 1
+$OBJECT_SCRIPT presidente "El Presidente: Cold War Contracts (Alpha)"
+$OBJECT_SCRIPT cancel_presidente "Stop El Presidente (Alpha)"
+$OBJECT_SCRIPT reset_presidente "Reset El Presidente (Alpha)"
 
 $ITEM_NAME "El Presidente: Cold War Politics"
  
